--- a/star-wars-blog/src/pages/Topic/Topic.scss
+++ b/star-wars-blog/src/pages/Topic/Topic.scss
@@ -96,9 +96,9 @@ $background-color_3: rgba(255, 255, 255, .8);
 			border-radius: 50%;
 			cursor: pointer;
 			overflow: hidden;
-				&:active {
-					outline: 4px solid white;
-				}
+			&:active, &:focus {
+				outline: 4px solid white;
+			}
 			.topic-button-next-page, .topic-button-prev-page {
 				width: 100%;
 				height: 100%;
