--- a/star-wars-blog/src/pages/MarketPage/MarketPage.scss
+++ b/star-wars-blog/src/pages/MarketPage/MarketPage.scss
@@ -73,15 +73,16 @@ $font-family_2: 'Starjedi';
         justify-content: space-between;
         .market-arrow {
             position: sticky;
-            top: 200px;
+            top: 250px;
             margin-top: 100px;
-            cursor: pointer;
             border-radius: 50%;
             width: 70px;
             height: 70px;
             img {
                 width: 100%;
                 height: 100%;
+                cursor: pointer;
+                border-radius: 50%;
             }
             &:active, &:active {
                 outline: 4px solid $color_2;
@@ -91,7 +92,7 @@ $font-family_2: 'Starjedi';
             left: 0;
         }
         .next {
-            right: 0;
+            left: 100%;
         }
     }
     .market-arrow-page-counter {
