Reprise des styles et du code JavaScript des composants et des pages de l'application pour implémentation de la navigation au clavier (accessibilité du site).

--- a/star-wars-blog/src/components/Card/Card.scss
+++ b/star-wars-blog/src/components/Card/Card.scss
@@ -23,7 +23,7 @@ $background-color_1: black;
 	transition-property: all;
 	transition-duration: 1s;
 	&:hover { 
-		border: 2px solid white;
+		border: 2px solid $color_1;
 	}
 	.card-home {
 		animation: fadein 1s;
@@ -61,7 +61,7 @@ $background-color_1: black;
 	opacity: 0.7;
 	transition-property: all;
 	transition-duration: 1s;
-	&:hover { 
+	&:hover, &:focus, &:active { 
 		opacity: 1;
 	}
 }
