--- a/star-wars-blog/src/components/TopicForm/TopicForm.scss
+++ b/star-wars-blog/src/components/TopicForm/TopicForm.scss
@@ -98,7 +98,7 @@ button {
 	background-color: $background-color_1;
 	margin-top: 0;
 	width: 40%;
-	&:hover {
+	&:hover, &:focus {
 		outline: none;
 		border: 4px solid rgb(53, 155, 155);
 	}
