Reprise du composant "Basket" pour le support de la persistence et de l'asynchrone, et reprise des styles de ce composant pour une meilleur UX.

--- a/star-wars-blog/src/components/Basket/Basket.scss
+++ b/star-wars-blog/src/components/Basket/Basket.scss
@@ -42,7 +42,8 @@ $font-family_1: Arial, Helvetica, sans-serif;
         }
     }
     .basket-content {
-        width: 100%;
+        padding: 0 5%;
+        width: 90%;
         max-height: 130px;
         margin-bottom: 15px;
         overflow: scroll;
@@ -63,6 +64,9 @@ $font-family_1: Arial, Helvetica, sans-serif;
             display: flex;
             justify-content: space-around;
         }
+    }
+    .basket-content-empty {
+        outline: 1px solid white;
     }
 }
 .basket-product {
