--- a/star-wars-blog/src/components/BasketCard/BasketCard.scss
+++ b/star-wars-blog/src/components/BasketCard/BasketCard.scss
@@ -9,7 +9,6 @@ $font-family_2: 'Starjedi';
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    // margin-bottom: 30px;
     height: fit-content;
     min-height: 120px;
     padding: 0 10px;
@@ -40,17 +39,13 @@ $font-family_2: 'Starjedi';
         display: flex;
         justify-content: space-between;
         align-items: center;
-        // background-color: green;
         .basket-page-product-title-wrapper {
             display: flex;
-            // flex: .4;
             width: 25%;
             padding: 0 10px;
-            // min-width: 100px;
             height: 80%;
             max-height: 80%;
             min-height: 80px;
-            // background-color: red;
             font-family: $font-family_1;
             text-align: start;
             overflow-wrap: break-word;
@@ -58,13 +53,11 @@ $font-family_2: 'Starjedi';
         }                        
         .basket-page-product-description {
             display: flex;
-            // flex: .5;
             width: 25%;
             height: 80%;
             padding: 0 10px;
             min-height: 80px;
             max-height: 80%;
-            // background-color: blue;
             font-size: 13px;
             text-align: start;
             overflow-wrap: break-word;
@@ -72,13 +65,9 @@ $font-family_2: 'Starjedi';
         }
         .basket-page-product-price {
             display: flex;
-            // flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            // background-color: yellow;
-            // flex: .5;
             width: 30%;
-            // min-width: 100px;
             height: 80%;
             padding: 0 5px;
             min-height: 80px;
@@ -96,16 +85,11 @@ $font-family_2: 'Starjedi';
                     display: flex;
                     justify-content: center;
                     align-items: flex-start;
-                    // background-color: orange;
                     width: fit-content;
-                    // font-size: 16px;
-                    // height: 100%;
                     font-family: $font-family_1;
                     .basket-page-product-price-text {
-                        // font-weight: bold;
                         text-align: start;
                         margin: 0;
-                        // background-color: limegreen;
                         height: fit-content;
                         width: 100%;
                         overflow-wrap: break-word;
@@ -114,7 +98,6 @@ $font-family_2: 'Starjedi';
                         width: 9px;
                         height: 15px;
                         margin-left: 5px;
-                        // background-color: lightseagreen;
                     }
                 }
             }
@@ -128,41 +111,37 @@ $font-family_2: 'Starjedi';
                 align-items: flex-start;
                 width: 45%;
                 cursor: default;
-                // background-color: blue;
                 .basket-page-product-quantity-counter {
                     font-size: 14px;
                     width: 100%;
-                    // min-width: 120px;
-                    // margin-bottom: 10px;
                     font-weight: bold;
                     text-align: center;
-                    // background-color: lightcoral;
                 }
                 .basket-page-product-quantity-manage {
                     margin-top: 5px;
                     display: flex;
                     width: 100%;
                     justify-content: space-evenly;
-                    // background-color: pink;
                     .basket-page-product-quantity-button {
                         font-size: 26px;
                         font-weight: bold;
                         text-align: center;
                         width: 30px;
-                        // background-color: limegreen;
                         cursor: pointer;
+                    }
+                    .disabled {
+                        color: rgb(100, 100, 100);
+                        cursor: default;
                     }
                 }
             }
         }
         .basket-page-product-total-price {
-            // background-color: lightskyblue;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
             cursor: default;
-            // flex: .5;
             width: 15%;
             height: 80%;
             min-height: 80px;
@@ -172,7 +151,6 @@ $font-family_2: 'Starjedi';
             .basket-page-product-total-price-title {
                 margin: 0;
                 font-weight: bold;
-                // background-color: lightcoral;
                 text-decoration: underline;
                 text-transform: uppercase;
             }
@@ -180,13 +158,11 @@ $font-family_2: 'Starjedi';
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                // background-color: lightcoral;
             }
             .basket-page-product-total-price-dataries-currency {
                 width: 8px;
                 height: 13px;
                 margin-left: 5px;
-                // background-color: lightseagreen;
             }
         }
     }
