--- a/star-wars-blog/src/pages/BasketPage/BasketPage.scss
+++ b/star-wars-blog/src/pages/BasketPage/BasketPage.scss
@@ -10,13 +10,12 @@ $font-family_2: 'Starjedi';
     inherits: false;
 }
 
-
 .basket-page-wrapper {
     position: relative;
     width: calc(80% - 2px);
     color: $color_1;
     font-family: $font-family_1;
-    background: url('../../assets/images/watto.webp') no-repeat center center;
+    background: url('../../assets/images/watto.webp') no-repeat center center fixed;
     background-size: cover;
     border: 1px solid $color_1;
     .basket-page-maintenance {
@@ -124,7 +123,6 @@ $font-family_2: 'Starjedi';
             margin-top: 110px;
         }
         .basket-page-full {
-            // outline: 1px solid $color_1;
             width: 200px;
             height: 200px;
             margin-top: 70px;
@@ -148,6 +146,81 @@ $font-family_2: 'Starjedi';
             align-items: center;
             font-size: 20px;
             font-family: $font-family_1;
+        }
+    }
+    .basket-page-total {
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        font-family: $font-family_1;
+        margin-bottom: 140px;
+        .basket-page-total-content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: fit-content;
+            gap: 10px;
+            .basket-page-total-text {
+                font-size: 20px;
+                font-family: $font-family_1;
+                margin: 0;
+                text-align: start;
+                overflow-wrap: break-word;
+            }
+            .basket-page-total-currency {
+                width: 9px;
+                height: 15px;
+                margin-left: 5px;
+            }
+            .basket-page-total-text {
+                font-size: 22px;
+                font-weight: bold;
+                font-family: $font-family_1;
+                margin-bottom: 10px;
+            }
+        }
+        .basket-page-total-button-wrapper {
+            width: 100%;
+            height: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .basket-page-total-button {
+                width: 300px;
+                height: 50px;
+                &:focus {
+                    border: none;
+                }
+                &:hover {
+                    border: 4px solid $color_2;
+                }
+                &:active {
+                    background-color: $background-color_1;
+                    color: $color_1;
+                    border: 4px solid $color_2;
+                }
+            }
+        }
+        .basket-page-total-legal {
+            .basket-page-total-legal-text {
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 70%;
+                font-size: 16px;
+                text-align: center;
+                .basket-page-total-legal-text-link {
+                    color: blue;
+                    &:active, &:focus {
+                        color: purple;
+                    }
+                }
+            }
         }
     }
 }
