--- a/star-wars-blog/src/pages/ShoppingPage/ShoppingPage.scss
+++ b/star-wars-blog/src/pages/ShoppingPage/ShoppingPage.scss
@@ -3,7 +3,6 @@ $background-color_1: black;
 $font-family_1: Arial, Helvetica, sans-serif;
 $font-family_2: 'Starjedi';
 
-
 .shopping-page-wrapper {
     position: relative;
     border: 1px solid $color_1;
@@ -33,7 +32,7 @@ $font-family_2: 'Starjedi';
         position: absolute;
         width: 100%;
         height: 100%;
-        background: url('../../assets/images/magasin_de_Watto.webp') no-repeat center center;
+        background: url('../../assets/images/magasin_de_Watto.webp') no-repeat center center fixed;
         background-size: cover;
         filter: brightness(.6);
         z-index: 0;
@@ -51,7 +50,6 @@ $font-family_2: 'Starjedi';
         z-index: 2;
         margin-top: 30px;
         position: sticky;
-        // left: 72%;
         display: flex;
         justify-content: flex-end;
         margin-right: 3%;
