--- a/star-wars-blog/src/pages/MoviesPage/MoviesPage.scss
+++ b/star-wars-blog/src/pages/MoviesPage/MoviesPage.scss
@@ -16,7 +16,7 @@ $font-family_2: 'Starjedi';
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url(../../assets/images/movies.webp) no-repeat center center;
+    background: url(../../assets/images/movies.webp) no-repeat center center fixed;
     background-size: cover;
     .movies-page-title {
         text-transform: lowercase;
@@ -86,7 +86,6 @@ $font-family_2: 'Starjedi';
                 overflow: hidden;
                 color: $color_1;
                 text-align: justify;
-                // padding-left: 50px;
                 padding-left: 6%;
                 font-family: $font-family_1;
                 font-size: 20px;
@@ -357,7 +356,6 @@ $font-family_2: 'Starjedi';
                 flex-direction: column;
                 justify-content: flex-start;
                 align-items: flex-start;
-                // margin: 0 !important;
                 margin-right: 0 !important;
                 margin-top: 0px !important;
                 width: 193px !important;
