--- a/star-wars-blog/src/pages/ShoppingPage/ShoppingPage.scss
+++ b/star-wars-blog/src/pages/ShoppingPage/ShoppingPage.scss
@@ -23,6 +23,7 @@ $font-family_2: 'Starjedi';
         top: 0;
         color: black;
         font-family: $font-family_1;
+        font-size: 16px;
         text-align: center;
         display: flex;
         justify-content: center;
@@ -52,19 +53,48 @@ $font-family_2: 'Starjedi';
         position: sticky;
         display: flex;
         justify-content: flex-end;
-        margin-right: 3%;
+        margin-right: 160px;
         top: 10px;
         width: 100%;
         height: 0;
     }
+    .shopping-page-outlet {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
 }
-
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
     .shopping-page-wrapper {
         width: calc(100% - 2px);
+        height: fit-content;
         .shopping-page-title {
             font-size: 22px;
         }
+        .shopping-page-maintenance {
+            font-size: 11px;
+        }
+        .shopping-basket-wrapper {
+            margin-right: 3%;
+            top: 14px;
+            margin-bottom: 210px;
+        }
+        .shopping-page-outlet {
+            position: relative;
+            align-items: flex-start;
+            z-index: 0;
+            margin-top: -260px;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+/* Ici : media queries pour la première partie smartphone */
+@media screen and (max-width: 660px) {
+	.shopping-page-wrapper {
+        width: calc(100% - 2px);
     }
 }
