--- a/star-wars-blog/src/components/Basket/Basket.scss
+++ b/star-wars-blog/src/components/Basket/Basket.scss
@@ -1,5 +1,6 @@
 $color_1: rgb(53, 155, 155);
 $color_2: black;
+$color_3: white;
 $font-family_1: Arial, Helvetica, sans-serif;
 @mixin basket-content-links {
     width: 40%;
@@ -16,7 +17,23 @@ $font-family_1: Arial, Helvetica, sans-serif;
     initial-value: 0deg;
     inherits: false;
 }
-
+.is-open-basket-button {
+    position: absolute;
+    top: 0;
+    right: -60px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $color_2;
+    outline: 3px solid $color_1;
+    border-radius: 50%;
+    cursor: pointer;
+    &:focus {
+        outline: 3px solid $color_3;
+    }
+}
 .basket-wrapper {
     position: relative;
     font-family: $font-family_1;
@@ -27,6 +44,7 @@ $font-family_1: Arial, Helvetica, sans-serif;
     min-width: 270px;
     height: fit-content;
     min-height: 100px;
+    outline: 3px solid $color_1;
     border-radius: 10px;
     .basket-title-all {
         display: flex;
@@ -54,7 +72,7 @@ $font-family_1: Arial, Helvetica, sans-serif;
             }
             .basket-page-link {
                 @include basket-content-links;
-                margin-left: 10px;
+                margin-left: 15px;
             }
         }
         .basket-product-wrapper {
@@ -82,28 +100,69 @@ $font-family_1: Arial, Helvetica, sans-serif;
         font-weight: bold;
     }
 }
-.basket-wrapper::after, .basket-wrapper::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    background-image: conic-gradient(from var(--angle), $color_2, $color_1);
-    z-index: -1;
-    padding: 3px;
-    border-radius: 10px;
-    animation: 3s spin linear infinite;
-}
-.basket-wrapper::before {
-    filter: blur(1.5rem);
-    opacity: .5;
-}
-@keyframes spin {
-    to {
-        --angle: 0deg;
-    } to {
-        --angle: 360deg;
+/* Ici : media queries pour la seconde partie tablette */
+@media screen and (max-width: 991px) {
+    .is-open-basket-button {
+        top: -10px;
+        right: 0;
+        scale: .9;
+    }
+	.basket-wrapper {
+        margin-top: 45px;
+        margin-right: 7px;
+        padding: 15px;
+        width: fit-content;
+        min-width: calc(270px / 2);
+        max-width: calc(270px / 2 + 35px);
+        height: fit-content;
+        min-height: calc(100px / 2);
+        max-height: calc(100px / 2 + 80px);
+    }
+    .basket-title {
+        font-size: 10px !important;
+        padding-left: 3px !important;
+    }
+    .basket-title-full-basket, .basket-title-empty-basket {
+        scale: .6;
+    }
+    .basket-content {
+        padding: 0 2px !important;
+        height: fit-content;
+        max-height: 100px !important;
+        width: 100% !important;
+        margin-bottom: 3px;
+        .basket-content-manager-section {
+            display: flex;
+            min-width: 100%;
+            height: fit-content;
+            padding-top: 3px;
+            padding-bottom: 3px;
+            .basket-empty-button {
+                font-size: 8px !important;
+                width: 50% !important;
+                margin-top: 2px !important;
+                margin-bottom: 2px !important;                
+            }
+            .basket-page-link {
+                font-size: 8px !important;
+                width: 50% !important;
+                margin-top: 2px !important;
+                margin-bottom: 2px !important;
+                margin-left: 7px !important;
+            }
+        }
+        .basket-product-wrapper {
+            font-size: 8px;
+            display: flex;
+            justify-content: space-around;
+            max-height: 30px !important;
+            line-height: 1.2 !important;
+        }
+    }
+    .basket-product {
+        font-size: 9px;
+    }
+    .basket-product-remove-cross {
+        font-size: 9px;
     }
 }
