--- a/star-wars-blog/src/pages/BasketPage/BasketPage.scss
+++ b/star-wars-blog/src/pages/BasketPage/BasketPage.scss
@@ -214,6 +214,7 @@ $font-family_2: 'Starjedi';
                 max-width: 70%;
                 font-size: 16px;
                 text-align: center;
+                line-height: 23px;
                 .basket-page-total-legal-text-link {
                     color: blue;
                     &:active, &:focus {
