--- a/star-wars-blog/src/sharedStyles/index.scss
+++ b/star-wars-blog/src/sharedStyles/index.scss
@@ -35,6 +35,28 @@ body {
 code {
 	font-family: $font-family_2;
 }
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@keyframes fadeout {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+.fade-in {
+    animation: fadein 0.3s;
+}
+.fade-out {
+    animation: fadeout 0.32s;
+}
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
 	.app {
