Légères améliorations dans l'interface et dans les styles de la page Home.

--- a/star-wars-blog/src/pages/Home/Home.scss
+++ b/star-wars-blog/src/pages/Home/Home.scss
@@ -44,6 +44,7 @@ $font-family_1: Arial, Helvetica, sans-serif;
 	h2 {
 		font-size: 32px;
 		color: white;
+		text-transform: lowercase;
 	}
 }
 .transition2 {
