--- a/star-wars-blog/src/pages/Error404/Error404.scss
+++ b/star-wars-blog/src/pages/Error404/Error404.scss
@@ -35,7 +35,7 @@ $color_2: white;
 		text-align: center;
 		font-size: 32px;
 		color: $color_1;
-		text-decoration: none;
+		text-decoration: underline;
 	}
 }
 /* Ici : media queries pour la seconde partie tablette */
