Reprise du code et des styles du composant "menu hamburger" pour une expérience utilisateur optimisée -> en cours.

--- a/star-wars-blog/src/components/BurgerMenu/BurgerMenu.scss
+++ b/star-wars-blog/src/components/BurgerMenu/BurgerMenu.scss
@@ -30,7 +30,7 @@ $background-color_2: transparent;
 	}
 	.span-wiki-menu {
 		@include span-wiki-menu-default-style;
-		&:hover {
+		&:hover, &:focus {
 			color: $color_1 !important;
 		}
 	}
