--- a/star-wars-blog/src/pages/ProductPage/ProductPage.scss
+++ b/star-wars-blog/src/pages/ProductPage/ProductPage.scss
@@ -29,7 +29,6 @@ $font-family_2: 'Starjedi';
         justify-content: flex-start;
         .product-page-arrow-link {
             position: absolute;
-            margin-left: 15px;
             margin-top: 20px;
             width: 90px;
             height: 90px;
@@ -122,7 +121,7 @@ $font-family_2: 'Starjedi';
     }
     .product-page-data-section {
         margin-left: 2%;
-        width: 30%;
+        width: 36%;
         min-height: 350px;
         display: flex;
         flex-direction: column;
@@ -185,4 +184,74 @@ $font-family_2: 'Starjedi';
     margin-bottom: 0;
     margin-top: 5px;
     text-align: initial;
+}
+/* Ici : media queries pour la seconde partie desktop */
+@media screen and (max-width: 1380px) {
+	.product-page-picture-section {
+        width: 310px !important;
+        height: 310px !important;
+    }
+    .product-page-data {
+        font-size: 14px;
+    }
+    .product-page-data-category-title {
+        font-size: 14px !important;
+    }
+    .product-page-data-section {
+        min-height: fit-content;
+    }
+    .product-page-data-price {
+        font-size: 14px !important;
+        .product-page-data-price-currency {
+            width: 10px !important;
+            height: 15px !important;
+        }
+        .product-page-data-price-basket-quantity {
+            font-size: 14px !important;
+            margin: 0 10px 0 15px !important;
+        }
+    }
+    .product-page-data-add-and-remove-button {
+        font-size: 25px !important;
+        height: 17px !important;
+        margin: 0 0 0 12px !important;
+    }
+    .product-page-arrow-link {
+        margin-top: 10px !important;
+        width: 70px !important;
+        height: 70px !important;
+        img {
+            width: 60px !important;
+            height: 60px !important;
+        }
+    }
+}
+/* Ici : media queries pour la première partie tablette */
+@media screen and (max-width: 1023px) {
+    .product-page-picture-section {
+        width: 270px !important;
+        height: 270px !important;
+    }
+    .product-page-arrow-link {
+        margin-top: 10px !important;
+        width: 60px !important;
+        height: 60px !important;
+        img {
+            width: 50px !important;
+            height: 50px !important;
+        }
+    }
+}
+/* Ici : media queries pour la troisième partie tablette */
+@media screen and (max-width: 767px) {
+	.product-page-main {
+        flex-direction: column;
+        align-items: center;
+    }
+    .product-page-data-section {
+        width: 265px !important;
+        min-height: fit-content;
+        margin-left: 0 !important;
+        margin-bottom: 80px !important;
+    }
 }
