--- a/star-wars-blog/src/components/BasketCard/BasketCard.scss
+++ b/star-wars-blog/src/components/BasketCard/BasketCard.scss
@@ -21,16 +21,40 @@ $font-family_2: 'Starjedi';
     outline: 1px solid $color_1;
     border-radius: 10px;
     background-color: rgba($color: $color_3, $alpha: .5);
-    .basket-page-product-image {
+    .basket-page-product-image-wrapper {
+        position: relative;
         width: 100px;
         height: 100px;
-        border-radius: 10px;
-        overflow: hidden;
-        outline: 1px solid $color_1;
-        background-color: $background-color_1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         cursor: pointer;
+        border-radius: 10px;
+        outline: 1px solid $color_1;
+        overflow: hidden;
+        background-color: $background-color_1;
         &:focus {
             outline: 1px solid $color_2;
+        }
+        .basket-page-product-image {
+            width: 100%;
+            height: 100%;
+        }
+        .basket-page-product-image-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            transition: 0.7s;
+            opacity: 0;
+            background: 
+                    linear-gradient(to right, $color_3, transparent 14%, transparent 86%, $color_3),
+                    linear-gradient(to top, $color_3, transparent 14%, transparent 86%, $color_3);
+            &:hover {
+                opacity: 0.7;
+            }
         }
     }
     .basket-page-product-details {
@@ -48,9 +72,10 @@ $font-family_2: 'Starjedi';
             min-height: 80px;
             font-family: $font-family_1;
             text-align: start;
-            overflow-wrap: break-word;
+            overflow-wrap: anywhere;
+            hyphens: auto;
             font-size: 18px;
-        }                        
+        }
         .basket-page-product-description {
             display: flex;
             width: 25%;
@@ -163,6 +188,117 @@ $font-family_2: 'Starjedi';
                 width: 8px;
                 height: 13px;
                 margin-left: 5px;
+            }
+        }
+    }
+}
+/* Ici : media queries pour la seconde partie desktop */
+@media screen and (max-width: 1380px) {
+	.basket-page-product {
+        .basket-page-product-image-wrapper {
+            width: 80px;
+            height: 80px;
+        }
+    }
+    .basket-page-product-details {
+        width: calc(99% - 80px) !important;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        .basket-page-product-title-wrapper {
+            font-size: 14px !important;
+            align-items: center;
+            flex: 1;
+        }
+        .basket-page-product-description {
+            display: none !important;
+        }
+        .basket-page-product-price {
+            flex: 2;
+            font-size: 14px !important;
+        }
+        .basket-page-product-total-price {
+            flex: 1;
+            justify-content: space-around !important;
+            font-size: 14px !important;
+            .basket-page-product-total-price-title {
+                font-size: 14px !important;
+            }
+            .basket-page-product-total-price-euros {
+                font-size: 14px !important;
+            }
+            .basket-page-product-total-price-dataries-currency {
+                width: 7px !important;
+                height: 11px !important;
+                margin-left: 4px !important;
+            }
+        }
+    }
+}
+/* Ici : media queries pour la seconde partie tablette */
+@media screen and (max-width: 991px) {
+    .basket-page-product {
+        width: 90% !important;
+    }
+    .basket-page-product-details {
+        width: calc(99% - 50px);
+        .basket-page-product-image-wrapper {
+            width: 50px;
+            height: 50px;
+        }
+    }
+}
+/* Ici : media queries pour la partie mobile */
+@media screen and (max-width: 767px) {
+    .basket-page-product {
+        .basket-page-product-image-wrapper {
+            display: none;
+        }
+    }
+    .basket-page-product-price-currency {
+        width: 7px !important;
+        height: 11px !important;
+    }
+    .basket-page-product-details {
+        width: 99% !important;
+        .basket-page-product-title-wrapper {
+            font-size: 10px !important;
+            max-width: 60px !important;
+            padding: 0 !important;
+        }
+        .basket-page-product-price {
+            font-size: 10px !important;
+            .basket-page-product-quantity {
+                min-width: 70px;
+                .basket-page-product-quantity-counter {
+                    font-size: 10px !important;
+                    width: 100%;
+                    font-weight: bold;
+                    text-align: center;
+                }
+                .basket-page-product-quantity-manage {
+                    margin-top: 5px;
+                    display: flex;
+                    width: 100%;
+                    justify-content: space-evenly;
+                    .basket-page-product-quantity-button {
+                        font-size: 20px !important;
+                    }
+                }
+            }
+        }
+        .basket-page-product-total-price {
+            font-size: 10px !important;
+            .basket-page-product-total-price-title {
+                font-size: 10px !important;
+            }
+            .basket-page-product-total-price-euros {
+                font-size: 10px !important;
+            }
+            .basket-page-product-total-price-dataries-currency {
+                width: 7px !important;
+                height: 11px !important;
+                margin-left: 4px !important;
             }
         }
     }
