--- a/star-wars-blog/src/pages/ShoppingPage/ShoppingPage.scss
+++ b/star-wars-blog/src/pages/ShoppingPage/ShoppingPage.scss
@@ -75,7 +75,8 @@ $font-family_2: 'Starjedi';
             font-size: 22px;
         }
         .shopping-page-maintenance {
-            font-size: 11px;
+            font-size: 12px;
+            height: 30px;
         }
         .shopping-basket-wrapper {
             margin-right: 3%;
