--- a/star-wars-blog/src/pages/BasketPage/BasketPage.scss
+++ b/star-wars-blog/src/pages/BasketPage/BasketPage.scss
@@ -120,6 +120,17 @@ $font-family_2: 'Starjedi';
         margin-bottom: 100px;
         .basket-page-empty {
             margin-top: 110px;
+            .basket-page-empty-text {
+                text-align: center;
+                line-height: 35px;
+                a {
+                    font-weight: bold;
+                    color: blue;
+                    &:active, &:focus {
+                        color: purple;
+                    }
+                }
+            }
         }
         .basket-page-full {
             width: 200px;
@@ -166,9 +177,12 @@ $font-family_2: 'Starjedi';
             height: fit-content;
             gap: 10px;
             .basket-page-total-text {
-                font-size: 20px;
+                cursor: default;
+                font-size: 22px;
+                font-weight: bold;
                 font-family: $font-family_1;
                 margin: 0;
+                margin-bottom: 10px;
                 text-align: start;
                 overflow-wrap: break-word;
             }
@@ -176,12 +190,6 @@ $font-family_2: 'Starjedi';
                 width: 9px;
                 height: 15px;
                 margin-left: 5px;
-            }
-            .basket-page-total-text {
-                font-size: 22px;
-                font-weight: bold;
-                font-family: $font-family_1;
-                margin-bottom: 10px;
             }
         }
         .basket-page-total-button-wrapper {
@@ -208,13 +216,15 @@ $font-family_2: 'Starjedi';
         }
         .basket-page-total-legal {
             .basket-page-total-legal-text {
+                cursor: default;
                 margin-left: auto;
                 margin-right: auto;
                 max-width: 70%;
                 font-size: 16px;
                 text-align: center;
-                line-height: 23px;
+                line-height: 25px;
                 .basket-page-total-legal-text-link {
+                    height: 100%;
                     color: blue;
                     &:active, &:focus {
                         color: purple;
@@ -281,6 +291,10 @@ $font-family_2: 'Starjedi';
         font-size: 16px !important;
     }
     .basket-page-total-legal-text {
+        line-height: 18px !important;
         font-size: 14px !important;
+    }
+    .basket-page-empty {
+        font-size: 16px !important;
     }
 }
