Amélioration du rendu des cartes : mise en place de l'API "react-intersection-observer" avec création d'un composant wrapper de carte, et de l'attribut "lazy" sur les images pour une apparition plus fluide des cartes de la page "Category". Egalement : optimisation du rendu d'apparition grâce à la mise en place d'une animation CSS pour les cartes du Wiki et de la boutique du site.

--- a/star-wars-blog/src/theme/index.scss
+++ b/star-wars-blog/src/theme/index.scss
@@ -51,11 +51,22 @@ code {
         opacity: 0;
     }
 }
+@keyframes scale {
+	0% {
+		transform: scaleX(0) scaleY(0);
+	}
+	100% {
+		transform: scaleX(1) scaleY(1);
+	}
+}
 .fade-in {
     animation: fadein 0.3s;
 }
 .fade-out {
     animation: fadeout 0.32s;
+}
+.card-appears-animation {
+	animation: fadein 2s, scale .5s;
 }
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
