--- a/star-wars-blog/src/theme/Account.scss
+++ b/star-wars-blog/src/theme/Account.scss
@@ -144,6 +144,13 @@ $background-color_6: transparent;
 		cursor: default;
 	}
 }
+.account-input-password-div {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .account-form-update {
 	display: flex;
 	flex-direction: column;
