--- a/star-wars-blog/src/theme/Auth.scss
+++ b/star-wars-blog/src/theme/Auth.scss
@@ -63,6 +63,13 @@ $background-color_2: transparent;
 		}
 	}
 }
+.login-form-password-div {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .login-form-input {
 	font-size: 16px;
 	text-align: center;
