Correction d'un bug graphique dans le wiki.

--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -96,6 +96,7 @@ $background-color_1: black;
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: flex-start;
+	z-index: 2;
 }
 .card-list-spinner {
 	position: absolute;
