Correction d'un bug graphique sur le composant Card (côté page Category).

--- a/star-wars-blog/src/components/Card/Card.scss
+++ b/star-wars-blog/src/components/Card/Card.scss
@@ -40,7 +40,7 @@ $background-color_1: black;
 	justify-content: center;
 	align-items: flex-start;
 }
-.card-link {
+.card-content {
 	position: relative;
 	display: flex;
 	flex-direction: column;
