Amélioration de l'effet d'apparition progressive des données de page dans les compteurs des pages "Category" et "MarketPage".

--- a/star-wars-blog/src/pages/MarketPage/MarketPage.scss
+++ b/star-wars-blog/src/pages/MarketPage/MarketPage.scss
@@ -110,6 +110,9 @@ $font-family_2: 'Starjedi';
         align-items: center;
         font-weight: bold;
         font-size: 18px;
+        .market-arrow-page-counter-text {
+            animation: fadein 3s;
+        }
     }
 }
 /* Ici : media queries pour la première partie tablette */
