--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -53,7 +53,9 @@ $background-color_1: black;
 	height: 100%;
 }
 .page-content {
+	position: relative;
 	width: 100%;
+	padding-bottom: 100px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -64,15 +66,27 @@ $background-color_1: black;
     -o-background-size: cover;
     background-size: cover;
 	h1 {
+		z-index: 2;
 		margin-top: 50px;
 		color: $color_1;
 		cursor: default;
 	}
 }
+.dozen-indicator-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
 .dozen-indicator {
 	position: sticky;
-	bottom: 50px;
+	// bottom: 50px;
+	// margin-bottom: 50px;
+	top: 88%;
 	margin-bottom: 50px;
+	left: 50%;
+	transform: translateX(-50%);
 	z-index: 2;
 	background-color: $background-color_1;
 	color: $color_1;
@@ -86,7 +100,9 @@ $background-color_1: black;
 	text-align: center;
 	line-height: 36px;
 	cursor: default;
-	animation: fadein 3s;
+	.dozen-indicator-text {
+		animation: fadein 3s;
+	}
 }
 .card-list {
 	width: calc(80% - 160px);
