--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -54,8 +54,7 @@ $background-color_1: black;
 }
 .page-content {
 	position: relative;
-	width: 100%;
-	padding-bottom: 100px;
+	width: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -72,18 +71,12 @@ $background-color_1: black;
 		cursor: default;
 	}
 }
-.dozen-indicator-container {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-}
 .dozen-indicator {
 	position: sticky;
 	// bottom: 50px;
 	// margin-bottom: 50px;
-	top: 88%;
+	// top: 88%;
+	bottom: 8%;
 	margin-bottom: 50px;
 	left: 50%;
 	transform: translateX(-50%);
@@ -171,10 +164,8 @@ $background-color_1: black;
 }
 /* Ici : media queries pour la troisième partie tablette */
 @media screen and (max-width: 767px) {
-	.page-content {
-		h1 {
-			font-size: 22px;
-		}
+	.page-content h1 {
+		font-size: 22px;
 	}
 	.dozen-indicator {
 		font-size: 16px;
