--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -54,7 +54,7 @@ $background-color_1: black;
 }
 .page-content {
 	position: relative;
-	width: auto;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -78,8 +78,6 @@ $background-color_1: black;
 	// top: 88%;
 	bottom: 8%;
 	margin-bottom: 50px;
-	left: 50%;
-	transform: translateX(-50%);
 	z-index: 2;
 	background-color: $background-color_1;
 	color: $color_1;
@@ -94,6 +92,7 @@ $background-color_1: black;
 	line-height: 36px;
 	cursor: default;
 	.dozen-indicator-text {
+		text-align: center;
 		animation: fadein 3s;
 	}
 }
